--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "eslint-plugin-typescript-sort-keys": "^3.2.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.360.0",
     "million": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
@@ -48,6 +50,7 @@
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.28.6",
     "@types/dompurify": "^3.0.5",
+    "@types/leaflet": "^1.9.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
